--- a/main.css
+++ b/main.css
@@ -4,6 +4,8 @@
   margin: 0;
   box-sizing: border-box;
   /* color: white; */
+
+  transition: all 0.35s ease-in-out;
 }
 
 body{
@@ -14,6 +16,28 @@ a {
   color: white;
   text-decoration: none;
 }
+
+.search div {
+    display: flex;
+    align-items: center;
+    margin: 10px;
+}
+
+.search #searchBtn {
+    border-left: none;
+    border-radius: 0 16px 16px 0;
+    transform: scale(1.2);
+
+    margin: 0;
+}
+.search input {
+    border-right: none;
+    border-radius: 16px 0 0 16px;
+    transform: scale(1.2);
+
+    margin: 0;
+}
+
 
 .settings {
   position: absolute;
@@ -35,6 +59,8 @@ a {
 
   height: 270px;
   width: 250px;
+
+  z-index: 1000;
 }
 
 .settings button {
@@ -65,6 +91,17 @@ a {
   width: 100%;
 }
 
+
+.btns a , .btns button {
+  width: 100%;
+  height: 50px;
+
+  text-align: center;
+  align-content: center;
+
+  cursor: pointer;
+  margin-bottom: 10px;
+}
 .search {
     display: flex;
     align-content: center;
